--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,3 +1,7 @@
 ﻿#
 # enet : https://github.com/lsalzman/enet
 add_subdirectory ( "${CMAKE_CURRENT_SOURCE_DIR}/enet" )
+
+#
+# magic_args : https://github.com/fredemmott/magic_args
+add_subdirectory ( "${CMAKE_CURRENT_SOURCE_DIR}/magic_args" )
